Fixed Tooltips on IE11
This updated the styles for IE to no longer use `display: inline-flex`
and use padding to position instead. This might break some custom styles
for tooltips if a fix was put in place already.

Closes #574

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -240,6 +240,11 @@ $md-btn-floating-margin: null !default;
       pointer-events: none;
     }
 
+    &--tooltip {
+      // This is required for IE11, the other browsers appear to do this by default.
+      overflow: visible;
+    }
+
     &:focus {
       outline-style: none;
     }
